2008-07-11  Timo Teras  <timo.teras@iki.fi>
	Track:259, original patch from Atis Elsts <the.kfx@gmail.com>:
	* src/racoon/isakmp.c, src/racoon/isakmp_inf.c: fix double memfree
	  by changing copy_ph1addresses() to not free ph1 on failure
	  and remove misplaced remph1() calls causing memory corruption

2008-07-09  Timo Teras  <timo.teras@iki.fi>
	Track:269, from Chong Peng <chongpeng@gmail.com>:
	* src/racoon/cfparse.y: remove parser initialization causing
	  fd leak from cfreparse() since cfparse() initializes it anyway

2008-07-02  Yvan Vanhullebus  <vanhu@netasq.com>
	Track:266, from Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: fixed some %d to %zu (size_t values)

2008-06-18  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/admin.h
	  src/racoon/admin.c
	  src/racoon/racoonctl.c
	  src/racoon/racoonctl.8 : acquire peer certificate via admin port

2008-06-18  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/misc.c
	  src/racoon/misc.h
	  src/racoon/admin.c
	  src/racoon/grabmyaddr.c
	  src/racoon/isakmp.c : avoid inherited file descriptor issues

2008-06-18  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/grabmyaddr.c
	  src/racoon/ipsec_doi.c
	  src/racoon/isakmp.c
	  src/racoon/isakmp_cfg.c
	  src/racoon/isakmp_inf.c
	  src/racoon/privsep.c
	  src/racoon/remoteconf.c
	  src/racoon/admin.c : network port value manipulation cleanup

2008-06-18  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/admin.c
	  src/racoon/racoonctl.c : admin port code cleanup

2008-06-18  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/pfkey.c : correct a phase2 status event

2008-05-08  Emmanuel Dreyfus  <manu@netbsd.org>
        From Christian Hohnstaedt <christian@hohnstaedt.de>:
	* configure.ac: allow out of tree building

2008-04-25  Yvan Vanhullebus  <vanhu@netasq.com>
	Track:4, from Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: extract ports information from